@@ -27,7 +27,8 @@ class Template < ActiveRecord::Base
       self.items << { description: item_hash[:description],
                       interval: item_hash[:interval].to_i,
                       units: (['days','weeks','months','years'].include?(item_hash[:units]) ? item_hash[:units] : 'days'),
-                      owner_id: item_hash[:owner_id]
+                      owner_id: item_hash[:owner_id],
+                      tags: (item_hash[:tags] || [])
                     } unless item_hash[:description].blank?
     end
     self.items.sort!{|a,b| a.symbolize_keys[:interval].to_i.send(a.symbolize_keys[:units]) <=> b.symbolize_keys[:interval].to_i.send(b.symbolize_keys[:units])}
@@ -37,7 +38,7 @@ class Template < ActiveRecord::Base
     group = current_user.groups.create({ project_id: self.project_id, description: additional_text, template_id: self.id })
     self.sorted_items.each_with_index do |item|
       item = item.symbolize_keys
-      current_user.stickies.create({ group_id: group.id, project_id: self.project_id, frame_id: frame_id, owner_id: item[:owner_id], description: item[:description].to_s, completed: false, due_date: (initial_date == nil ? nil : initial_date + item[:interval].send(item[:units])) })
+      current_user.stickies.create({ group_id: group.id, project_id: self.project_id, frame_id: frame_id, owner_id: item[:owner_id], description: item[:description].to_s, tags: (item[:tags] || []), completed: false, due_date: (initial_date == nil ? nil : initial_date + item[:interval].send(item[:units])) })
     end
     group.reload
     
