@@ -11,16 +11,32 @@
     <table class="blank">
       <tr>
         <td style="padding-right:20px"><b>Offset from Initial Due Date:</b></td>
-        <td><b>Assigned To:</b></td>
+        <td style="padding-right:20px"><b>Assigned To:</b></td>
+        <td><b>Tags:</b></td>
       </tr>
       <tr>
         <td style="padding-right:20px">
           <%= number_field_tag "template[item_tokens][#{position}][interval]", @item[:interval] %>
           <%= select_tag "template[item_tokens][#{position}][units]", options_for_select(['days', 'weeks', 'months', 'years'].collect{|i| [i,i]}, @item[:units]) %>
         </td>
-        <td>
+        <td style="padding-right:20px">
           <% owners = User.current.with_project(current_user.all_projects.where(id: @template.project_id), true).order('last_name, first_name') %>
           <%= select_tag "template[item_tokens][#{position}][owner_id]", options_for_select([['---', nil]] + owners.collect{|u| [u.reverse_name,u.id]}, @item[:owner_id]) %>
+        </td>
+        <td>
+          <% if @template.project and @template.project.tags.size > 0 %>
+            <table class="blank padded">
+              <% @template.project.tags.in_groups_of(5).each do |row_tags| %>
+                <tr>
+                  <% row_tags.each do |tag| %>
+                    <td><% if tag %><%= check_box_tag "template[item_tokens][#{position}][tags][]", tag, (@item[:tags] || []).include?(tag) %> <%= tag %><% end %></td>
+                  <% end %>
+                </tr>
+              <% end %>
+            </table>
+          <% else %>
+            <span class="quiet">Edit project to add sticky tags.</span>
+          <% end %>
         </td>
       </tr>
     </table>
