@@ -9,6 +9,7 @@ one:
   start_date: 2011-02-24
   end_date: 2011-02-24
   deleted: false
+  tags: ['alpha', 'beta', 'gamma']
 
 two:
   user: valid
